# adventofcode2024

./: .gitignore  README.md  launch.json  pyopen.py  pyproject.toml
challenges/: __main__.py  utils.py
challenges/01/: 01.py  02.py
challenges/02/: 01.py  02.py
challenges/03/: 01.py  02.py
challenges/04/: 01.py  02.py
challenges/day1/: 01.py  02.py  part_one.py  part_two.py  test_day1.py
challenges/day10/: part_one.py  part_two.py  test_day10.py
challenges/day11/: part_one.py  part_two.py  test_day11.py
challenges/day12/: part_one.py  part_two.py  test_day12.py
challenges/day13/: part_one.py  part_two.py  test_day13.py
challenges/day14/: part_one.py  part_two.py  test_day14.py
challenges/day15/: part_one.py  part_two.py  test_day15.py
challenges/day2/: 02.py  test_day2.py
challenges/day3/: 02.py  part_one.py  test_day3.py
challenges/day4/: 02.py  part_one.py  part_two.py  test_day4.py
challenges/day5/: part_one.py  part_two.py  test_day5.py
challenges/day6/: part_one.py  part_two.py  test_day6.py
challenges/day7/: correct.py  part_one.py  part_two.py  test_day7.py
challenges/day8/: part_one.py  part_two.py  test_day8.py
challenges/day9/: part_one.py  part_two.py  test_day9.py
