[project]
name = "adventofcode2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check . "
format = "ruff format ."
typecheck = "mypy -p challenges"
check = "task lint && task typecheck"
test = "pytest ."
