[project]
name = "adventofcode2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.3",
    "inquirerpy>=0.3.4",
    "loguru>=0.7.3",
    "mypy>=1.13.0",
    "pathos>=0.3.3",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "taskipy>=1.14.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[tool.taskipy.tasks]
lint = "ruff check . "
format = "ruff format ."
typecheck = "mypy -p challenges"
check = "task lint && task typecheck"
test = "pytest ."
cli = "python -m challenges"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff]
line-length = 120
